--- a/_includes/next-card.html
+++ b/_includes/next-card.html
@@ -1,10 +1,10 @@
 <article class="post-card post {% unless page.next.image %}no-image{% endunless %}">
 
     {% if page.next.image %}
-    <a class="post-card-image-link" href="{{page.next.url}}">
+    <a class="post-card-image-link" href="{{ site.baseurl }}{{page.next.url}}">
         <img class="post-card-image"
             loading="lazy"
-            src="{{page.next.image}}"
+            src="{{ site.baseurl }}{{page.next.image}}"
             alt="{{page.next.title}}"
         />
     </a>
