--- a/_includes/site-nav.html
+++ b/_includes/site-nav.html
@@ -2,9 +2,9 @@
     <div class="site-nav-left-wrapper">
         <div class="site-nav-left">
             {% if site.logo %}
-                <a class="site-nav-logo" href="{{ site.url }}"><img src="{{site.logo}}" alt="{{site.title}} logo" /></a>
+                <a class="site-nav-logo" href="{{ site.url }}{{ site.baseurl }}"><img src="{{ site.baseurl }}{{site.logo}}" alt="{{site.title}} logo" /></a>
             {% else %}
-                <a class="site-nav-logo" href="{{site.url}}">{{site.title}}</a>
+                <a class="site-nav-logo" href="{{site.url}}{{ site.baseurl }}">{{site.title}}</a>
             {% endif %}
             <div class="site-nav-content">
                 <ul class="nav">
