Another URL fix

--- a/_includes/post-card.html
+++ b/_includes/post-card.html
@@ -12,7 +12,7 @@
 
     <div class="post-card-content">
 
-        <a class="post-card-content-link" href="{{post.url}}">
+        <a class="post-card-content-link" href="{{ site.baseurl }}{{post.url}}">
 
             <header class="post-card-header">
                     <div class="post-card-primary-tag">{{post.date | date: "%d-%m-%Y"}}</div>
