--- a/_includes/next-card.html
+++ b/_includes/next-card.html
@@ -12,7 +12,7 @@
 
     <div class="post-card-content">
 
-        <a class="post-card-content-link" href="{{page.next.url}}">
+        <a class="post-card-content-link" href="{{ site.baseurl }}{{page.next.url}}">
 
             <header class="post-card-header">
                     <div class="post-card-primary-tag">{{page.next.date | date: "%d-%m-%Y"}}</div>
