--- a/_includes/previous-card.html
+++ b/_includes/previous-card.html
@@ -12,7 +12,7 @@
 
     <div class="post-card-content">
 
-        <a class="post-card-content-link" href="{{page.previous.url}}">
+        <a class="post-card-content-link" href="{{ site.baseurl }}{{page.previous.url}}">
 
             <header class="post-card-header">
                     <div class="post-card-primary-tag">{{page.previous.date | date: "%d-%m-%Y"}}</div>
